@@ -21,7 +21,7 @@ import shutil
 import webbrowser
 import smtplib
 import shlex
-from Cookie import SimpleCookie
+from Cookie import BaseCookie
 try:
     from cStringIO import StringIO
 except ImportError:
@@ -367,7 +367,7 @@ class TestApp(object):
             self.pre_request_hook(self)
         __tracebackhide__ = True
         if self.cookies:
-            c = SimpleCookie()
+            c = BaseCookie()
             for name, value in self.cookies.items():
                 c[name] = value
             req.environ['HTTP_COOKIE'] = str(c).split(': ', 1)[1]
@@ -404,7 +404,7 @@ class TestApp(object):
             self._check_errors(res)
         res.cookies_set = {}
         for header in res.all_headers('set-cookie'):
-            c = SimpleCookie(header)
+            c = BaseCookie(header)
             for key, morsel in c.items():
                 self.cookies[key] = morsel.value
                 res.cookies_set[key] = morsel.value
